@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016-2022 Thomas Akehurst
+ * Copyright (C) 2016-2023 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,12 +15,13 @@
  */
 package com.github.tomakehurst.wiremock.common;
 
-import static com.github.tomakehurst.wiremock.common.Exceptions.throwUnchecked;
+import static java.nio.charset.StandardCharsets.UTF_8;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 
 public class Encoding {
+
+  private Encoding() {}
 
   private static Base64Encoder encoder = null;
 
@@ -28,7 +29,7 @@ public class Encoding {
     if (encoder == null) {
       synchronized (Encoding.class) {
         if (encoder == null) {
-          encoder = new GuavaBase64Encoder();
+          encoder = new JdkBase64Encoder();
         }
       }
     }
@@ -48,11 +49,7 @@ public class Encoding {
     return content != null ? getInstance().encode(content, padding) : null;
   }
 
-  public static String urlEncode(String unencodedUrl) {
-    try {
-      return URLEncoder.encode(unencodedUrl, "utf-8");
-    } catch (UnsupportedEncodingException e) {
-      return throwUnchecked(e, String.class);
-    }
+  public static String urlEncode(String encodedUrl) {
+    return URLEncoder.encode(encodedUrl, UTF_8);
   }
 }
